Implemented ng-disable directive and improved custom filter  nameProduct

--- a/app/views/authors/authorEdit.html
+++ b/app/views/authors/authorEdit.html
@@ -86,7 +86,7 @@
             {{buttonText}}
           </button>
           &nbsp;&nbsp;
-          <button type="submit" class="btn btn-primary" data-ng-click="deleteAuthor()">
+          <button type="submit" class="btn btn-primary" data-ng-disabled="buttonDisplay" data-ng-click="deleteAuthor()">
             Delete Author
           </button>
           <!--<button class="btn btn-danger" data-ng-if="vm.customer.id > 0" data-ng-click="vm.deleteCustomer()">Delete</button>-->
