--- a/app/views/products/productEdit.html
+++ b/app/views/products/productEdit.html
@@ -22,8 +22,8 @@
         </div>
         <div class="col-md-10">
           <!-- label for value in array -->
-          <select id="peopleArraySel2"  class="form-control" ng-model="author" ng-options="getAllDetailsOfAuthor(author) for author in authors">
-            < value="">Choose a author</option>
+          <select  id="peopleArraySel2"  class="form-control" ng-model="defaultValue" ng-options="getAllDetailsOfAuthor(author) for author in authors">
+
           </select><br />
 
             <!--<select class="form-control" ng-model="selectedItem" ng-value="author.CustomerID"
