--- a/app/views/authors/authors.html
+++ b/app/views/authors/authors.html
@@ -28,20 +28,29 @@
       <div class="form-group">
         <label class="navbarText col-sm-2">Filter:</label>
         <div class="col-sm-10">
-          <input type="text" data-ng-model="searchText" />
+          <input type="text" data-ng-model="searchText" data-ng-change="searchTextChanged();"  placeholder="Enter your search terms" />
          <!-- <input type="text"
                  data-ng-model="vm.searchText"
                  data-ng-change="vm.searchTextChanged()"
                  class="novalidate form-control" />-->
-          <button type="submit" class="btn btn-primary" data-ng-click="findAuthor()">Search</button>
-          <div>{{filteredAuthors}}</div>
+        <!--  <button type="submit" class="btn btn-primary" data-ng-click="findAuthor()">Search</button>
+          <div>{{filteredAuthors}}</div>-->
         </div>
       </div>
     </form>
   </div>
   <div >
-    <div class="col-sm-6 col-md-4 col-lg-3" ng-repeat="author in authors" data-ng-hide="listDisplayModeEnabled">
+
+<!--    <ui>
+      <li class="col-sm-6 col-md-4 col-lg-3" ng-repeat="author in authors | nameProduct:searchText" data-ng-hide="listDisplayModeEnabled">
+        {{author.ContactName}}-  {{author.ContactTitle}}-  {{author.CompanyName}}  <a  ng-href="#/authorEdit/{{author.CustomerID}}" ng-model ="author.CustomerID" >Edit</a>
+        <a  ng-href="#/products" ng-model ="author.CustomerID" >Products</a>
+      </li>
+    </ui>-->
+
+    <div class="col-sm-6 col-md-4 col-lg-3" ng-repeat="author in filteredAuthors" data-ng-hide="listDisplayModeEnabled">
       {{author.ContactName}}-  {{author.ContactTitle}}-  {{author.CompanyName}}  <a  ng-href="#/authorEdit/{{author.CustomerID}}" ng-model ="author.CustomerID" >Edit</a>
+      <a  ng-href="#/products" ng-model ="author.CustomerID" >Products</a>
     </div>
 
     <div  class="row gridContainer customersTable show-hide-animation"   data-ng-show="listDisplayModeEnabled">
@@ -58,7 +67,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr data-ng-repeat="author in authors" class="repeat-animation">
+            <tr data-ng-repeat="author in filteredAuthors" class="repeat-animation">
               <td>{{author.ContactName}}</td>
               <td>{{author.CompanyName}}</td>
               <td><a  ng-href="#/authorEdit/{{author.CustomerID}}" ng-model ="author.CustomerID" >Edit</a></td>
