--- a/app/views/authors/authorEdit.html
+++ b/app/views/authors/authorEdit.html
@@ -30,7 +30,7 @@
       </br>
       <div class="row">
         <div class="col-md-2">
-          Last Name:
+          Phone Number:
         </div>
         <div class="col-md-10">
           <input type="text" name="firstName" class="form-control" data-ng-model="author.ContactTitle"  />
@@ -42,7 +42,7 @@
       </br>
       <div class="row">
         <div class="col-md-2">
-          Last Name:
+          Address:
         </div>
         <div class="col-md-10">
           <input type="text" name="firstName" class="form-control" data-ng-model="author.Address"  />
@@ -54,7 +54,7 @@
       </br>
       <div class="row">
         <div class="col-md-2">
-          Last Name:
+          City:
         </div>
         <div class="col-md-10">
           <input type="text" name="firstName" class="form-control" data-ng-model="author.City"  />
@@ -66,7 +66,7 @@
       </br>
       <div class="row">
         <div class="col-md-2">
-          Last Name:
+          State:
         </div>
         <div class="col-md-10">
           <input type="text" name="firstName" class="form-control" data-ng-model="author.State"  />
