--- a/app/views/products/products.html
+++ b/app/views/products/products.html
@@ -32,7 +32,7 @@
             <tbody>
             <tr data-ng-repeat="product in products" class="repeat-animation">
               <td>{{product.ProductName}}</td>
-              <td>{{product.CustomerID}}</td>
+              <td>{{product.ContactName}}</td>
               <td><a  ng-href="#/productEdit/{{product.CustomerID}}/{{product.ProductID}}" ng-model ="product.ProductID" >Edit</a></td>
             </tr>
             </tbody>
