Added calendar as custom directive

--- a/app/views/orders/orderEdit.html
+++ b/app/views/orders/orderEdit.html
@@ -21,7 +21,8 @@
           Date:
         </div>
         <div class="col-md-10">
-          <input type="text" name="firstName" class="form-control" data-ng-model="order.DateOfSale"/>
+       <!--   <input type="text" name="firstName" class="form-control" data-ng-model="order.DateOfSale"/>-->
+          <calendar selected="day"></calendar>
           <!--<span class="errorMessage" ng-show="editForm.firstName.$touched && editForm.firstName.$invalid">-->
           <!--First name is required-->
           <!--</span>-->
