--- a/app/views/orders/orderEdit.html
+++ b/app/views/orders/orderEdit.html
@@ -20,9 +20,22 @@
         <div class="col-md-2">
           Date:
         </div>
+
         <div class="col-md-10">
        <!--   <input type="text" name="firstName" class="form-control" data-ng-model="order.DateOfSale"/>-->
-          <calendar selected="day"></calendar>
+
+
+          <div class="dropdown">
+            <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown" data-target="#" >
+            <!--  href="#"-->
+              <div class="input-group"><input type="text" class="form-control" data-ng-model="order.DateOfSale"><span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
+              </div>
+            </a>
+            <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+              <calendar data-ng-model="order.DateOfSale" selected="order.DateOfSale" ></calendar>
+             <!-- <datetimepicker data-ng-model="startDate" data-datetimepicker-config="{ dropdownSelector: '#dropdown2', minView: 'hour' }"/>-->
+            </ul>
+          </div>
           <!--<span class="errorMessage" ng-show="editForm.firstName.$touched && editForm.firstName.$invalid">-->
           <!--First name is required-->
           <!--</span>-->
