--- a/app/views/orders/orders.html
+++ b/app/views/orders/orders.html
@@ -17,14 +17,59 @@
     <div ng-dropdown-multiselect="" options="authors"></div>
   </div>
   <div class="row">
-    <form class="navbar-form navbar-left">
-      <div class="form-group">
        <!-- <label class="navbarText col-sm-2">Filter:</label>-->
-      <input type="text"  data-ng-model="searchText" data-ng-change="searchTextChanged();"  placeholder="Search for authors, products" />
+      <input class="col-md-10" type="text"  data-ng-model="searchText" data-ng-change="searchTextChanged();"  placeholder="Search for authors, products" />
 
-      </div>
-    </form>
+
   </div>
+
+  <div class="row">
+    <div class="col-md-1">
+     Start Date:
+    </div>
+    <div class="col-md-3">
+      <!--   <input type="text" name="firstName" class="form-control" data-ng-model="startDate"/>-->
+
+      <div class="dropdown">
+        <a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-target="#" >
+          <!--  href="#"-->
+          <div class="input-group"><input type="text" uib-datepicker-popup="mediumDate" date class="form-control" data-ng-model="startDate">
+            <span class="input-group-addon">
+              <i class="glyphicon glyphicon-calendar"></i>
+            </span>
+          </div>
+        </a>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+          <calendar data-ng-model="startDate" selected="startDate" ></calendar>
+        </ul>
+      </div>
+      </div>
+  </div>
+
+
+  <div class="row">
+    <div class="col-md-1">
+    End Date:
+    </div>
+    <div class="col-md-3">
+      <div class="dropdown">
+        <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown" data-target="#" >
+          <!--  href="#"-->
+          <div class="input-group">
+            <input type="text" class="form-control" data-ng-model="endDate">
+            <span class="input-group-addon">
+              <i class="glyphicon glyphicon-calendar"></i>
+            </span>
+          </div>
+        </a>
+        <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
+          <calendar data-ng-model="endDate" selected="endDate" ></calendar>
+
+        </ul>
+      </div>
+    </div>
+  </div>
+
   <div >
 
     <div  class="row gridContainer customersTable show-hide-animation" >
