--- a/app/views/orders/orders.html
+++ b/app/views/orders/orders.html
@@ -13,28 +13,26 @@
       </li>
     </ul>
   </div>
-  <div class="row">
-    <div ng-dropdown-multiselect="" options="authors"></div>
-  </div>
+
   <div class="row">
        <!-- <label class="navbarText col-sm-2">Filter:</label>-->
       <input class="col-md-10" type="text"  data-ng-model="searchText" data-ng-change="searchTextChanged();"  placeholder="Search for authors, products" />
-
-
   </div>
 
   <div class="row">
-    <div class="col-md-1">
-     Period:
+    <div class="col-md-2">
+      <dropdown-multiselect pre-selected="member.roles" model="selected_items" options="roles"></dropdown-multiselect>
     </div>
-    <div class="col-md-3">
-      <!--   <input type="text" name="firstName" class="form-control" data-ng-model="startDate"/>-->
+    <div class="col-md-1">
+      Period:
+    </div>
+    <div class="col-md-2">
 
       <div class="dropdown">
         <a class="dropdown-toggle" id="dropdown1" role="button" data-toggle="dropdown" data-target="#" >
           <!--  href="#"-->
           <div class="input-group">
-            <input type="text" class="form-control"  data-ng-model="formatStartDate()">
+            <input type="text" class="form-control"  data-ng-model="startDate">
             <span class="input-group-addon">
               <i class="glyphicon glyphicon-calendar"></i>
             </span>
@@ -46,14 +44,14 @@
       </div>
       </div>
 
-    <div class="col-md-3">
+    <div class="col-md-2">
       <!--   <input type="text" name="firstName" class="form-control" data-ng-model="startDate"/>-->
 
       <div class="dropdown">
         <a class="dropdown-toggle" id="dropdown2" role="button" data-toggle="dropdown" data-target="#" >
           <!--  href="#"-->
           <div class="input-group">
-            <input type="text" class="form-control"  data-ng-model="formatEndDate()">
+            <input type="text" class="form-control"  data-ng-model="endDate">
             <span class="input-group-addon">
               <i class="glyphicon glyphicon-calendar"></i>
             </span>
@@ -64,14 +62,15 @@
         </ul>
       </div>
     </div>
+    <div class="col-md-2">
+      <button class="btn-default" type="submit" data-ng-click="searchButton()">
+        Search
+      </button>
+    </div>
   </div>
-  <div class="col-md-3">
-    <button class="btn-default" type="submit" data-ng-click="searchButton()">
-      Search
-    </button>
+<div>
   </div>
-  <div >
-
+  <div>
     <div  class="row gridContainer customersTable show-hide-animation" >
       <div class="col-md-10">
         <div>
