dropdown custom directive

--- a/app/views/orders/orders.html
+++ b/app/views/orders/orders.html
@@ -21,7 +21,10 @@
 
   <div class="row">
     <div class="col-md-2">
-      <dropdown-multiselect pre-selected="member.roles" model="selected_items" options="roles"></dropdown-multiselect>
+<!--
+      <dropdown-multiselect pre-selected="member.authors" model="selected_items" options="authors"></dropdown-multiselect>
+-->
+      <dropdown-multiselect  model="selected_items" options="authors"></dropdown-multiselect>
     </div>
     <div class="col-md-1">
       Period:
