--- a/app/views/authors/authors.html
+++ b/app/views/authors/authors.html
@@ -28,7 +28,7 @@
       <div class="form-group">
         <label class="navbarText col-sm-2">Filter:</label>
         <div class="col-sm-10">
-          <input type="text" data-ng-model="searchText" data-ng-change="searchTextChanged();"  placeholder="Enter your search terms" />
+          <input type="text"  class="text-warning" data-ng-model="searchText" data-ng-change="searchTextChanged();"  placeholder="Enter your search terms" />
          <!-- <input type="text"
                  data-ng-model="vm.searchText"
                  data-ng-change="vm.searchTextChanged()"
