--- a/app/views/orders/orderEdit.html
+++ b/app/views/orders/orderEdit.html
@@ -47,7 +47,7 @@
           Price:
         </div>
         <div class="col-md-10">
-          <input type="text" name="firstName" class="form-control" data-ng-model="order.UnitPrice"/>
+          <input type="number" name="firstName" class="form-control" data-ng-model="order.UnitPrice"/>
           <!--<span class="errorMessage" ng-show="editForm.firstName.$touched && editForm.firstName.$invalid">-->
           <!--First name is required-->
           <!--</span>-->
@@ -59,7 +59,7 @@
          Qunatity:
         </div>
         <div class="col-md-10">
-          <input type="text" name="firstName" class="form-control" data-ng-model="order.Quantity"/>
+          <input type="number" name="firstName" class="form-control" data-ng-model="order.Quantity"/>
           <!--<span class="errorMessage" ng-show="editForm.firstName.$touched && editForm.firstName.$invalid">-->
           <!--First name is required-->
           <!--</span>-->
