--- a/app/views/products/products.html
+++ b/app/views/products/products.html
@@ -19,7 +19,7 @@
     <div  class="row gridContainer customersTable show-hide-animation">
       <div class="col-md-10">
         <div>
-          <table class="table table-striped table-condensed" backgrond="grey">
+          <table class="table table-striped table-condensed" >
             <thead>
             <tr>
               <!--<th>&nbsp;</th>-->
